--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,49 @@
   margin: 0;
 }
 
+/* animations */
+@keyframes underline {
+  from {
+    width: 0px;
+    left:50%
+  }
+  to {width: 100%;left:0;}
+}
+
 body {
   background-color: #f1dfe8;
-  padding: 2vh 5vw;
+  padding: 30px;
   font-family: 'Inclusive Sans';
   display: flex;
-  height: 100vh;
-  align-items: center;
   justify-content: center;
+}
+
+h1,h2 {
+  padding-bottom: 1em;
+}
+
+p {
+  padding-bottom: 1em;
+}
+
+ul {
+  padding-left: 1em;
+}
+
+a {
+  color: #3f0c61;
+  text-decoration: none;
+  position: relative;
+}
+
+a:hover:after {
+  content: '';
+  display: block;
+  height: 2px;
+  background-color: #3f0c61;
+  width: 100%;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  animation: underline 0.2s forwards;
 }
